<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="msg_shortcut_created">Shortcut is created.</string>
    <string name="msg_password_changed">Password is changed.</string>
    <string name="msg_password_changing">"Changing password by %s.\n(If you forget this, clear app data.)"</string>
    <string name="msg_password_first">Please enter the password.</string>
    <string name="msg_password_not">Password is incorrect.</string>

    <string name="edit_time">Update time when editing</string>

    <string name="move_hidden_return">Return</string>
    <string name="move_hidden">Hide</string>
    <string name="hidden">Hidden</string>
    <string name="change_password">Change password</string>

    <string name="app_name">Logger</string>
    <string name="shortcut_name">Quick Log</string>

    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="remove_highlight">Remove highlight</string>
    <string name="remove_all">Remove all</string>
    <string name="highlight">Highlight</string>

    <string name="copy">Copy</string>
    <string name="copy_all">Copy all</string>
    <string name="share">Share</string>
    <string name="share_all">Share all</string>
    <string name="add">Add</string>

    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="ok">OK</string>
    <string name="create">Create</string>
    <string name="hint_label">Label</string>

    <string name="setting">Setting</string>
    <string name="timezone">Timezone</string>
    <string name="backup">Backup</string>
    <string name="date_format">Date Format</string>
    <string name="date_format_change">Change date format</string>
    <string name="shortcut">Create shortcut</string>

    <string name="copy_message">Copied to clipboard.</string>
    <string name="saved_message">Text is saved.</string>
    <string name="remove_date_message">Remove %1$d items in this date.\n(This cannot be undone)</string>

    <string name="reset">Reset</string>

    <string name="save">Save</string>
    <string name="menu">Menu</string>
    <string name="theme">Theme</string>
    <string name="undo">Undo</string>
    <string name="search">Search</string>
    <string name="close_search">Close Search</string>

    <string name="allow_keypad_prediction">Allow Keypad Prediction</string>
    <string name="setting_secure">Hide screen on recent app list</string>

    <string name="label_separator">Shortcut label separator</string>
    <string name="left">Left</string>
    <string name="right">Right</string>

    <string name="change_time">Change Time</string>
    <string name="move">Open link</string>
    <string name="shortcut_setting">Shortcut setting</string>
    <string name="saving_time_setting">Saving time</string>

    <string-array name="saving_time_list">
        <item>Clicking Save</item>
        <item>Starting input</item>
    </string-array>

    <string-array name="db_help">
        <item>Try click or long-press a item.</item>
        <item>You can zoom in/zoom out with two finger.</item>
        <item>You can toggle search mode by long-pressing save button.\nSearch button searches the matched items from bottom.</item>
        <item>You can share text from another app to this app.</item>
        <item>Try long-press a date item.</item>
        <item>You can change date/time by clicking time(00:00) at the left of each item.</item>
        <item>Menu - Hidden log : default password is nothing. (Just click confirm button)</item>
        <item>You can open link. (detects line starting with "http://" or "https://")</item>
        <item>ex) Youtube Music Feed\nhttps://www.youtube.com/feed/music</item>
    </string-array>

    <string-array name="db_help_hidden">
        <item>Please change your password from the menu.</item>
    </string-array>

    <string name="patch_note_43">[Update]\n- You can change date/time by clicking time(00:00) at the left of each item.</string>
    <string name="patch_note_44">[Update]\n- You can open link. (detects line starting with "http://" or "https://")\nex) Youtube Music Feed\nhttps://www.youtube.com/feed/music</string>
    <string name="patch_note_45">[Update]\n- You can select saving time at the setting.\n- You can set update time when editing at the setting.</string>

    <string-array name="df_week_short"> <!--ddd-->
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>

    <string-array name="df_week"> <!--dddd-->
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string-array name="df_week_han"> <!--W-->
        <item>日</item>
        <item>月</item>
        <item>火</item>
        <item>水</item>
        <item>木</item>
        <item>金</item>
        <item>土</item>
    </string-array>

    <string-array name="df_month_short"> <!--mmm-->
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="df_month"> <!--mmmm-->
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="df_ymd">
        <item>". "</item>
        <item>". "</item>
        <item>". "</item>
    </string-array>

    <string name="date_format_help">"ex) 2019&#8211;4&#8211;2 (TUE)\n{YYYY} = 2019 {YY} = 19\n{M} = 4 {MM} = 04 {_M} = _4\n{D} = 2 {DD} = 02 {_D} = _2\n{MMMM} = APRIL {DDDD} = MONDAY\n{mmmm} = April {dddd} = Monday\n{MMM} = APR    {DDD} = MON\n{mmm} = Apr    {ddd} = Mon\n{W} = 火       {n} = New Line\nDay of week color setting\n{wf} = from    {wt} = to"</string>
    <!--
    ex) 2019-4-2 (TUE)
    {YYYY} = 2019 {YY} = 19
    {M} = 4 {MM} = 04 {_M} = _4
    {D} = 2 {DD} = 02 {_D} = _2
    {MMMM} = APRIL {DDDD} = MONDAY
    {mmmm} = April {dddd} = Monday
    {MMM} = APR    {DDD} = MON
    {mmm} = Apr    {ddd} = Mon
    {W} = 火       {n} = New Line
    Day of week color setting
    {wf} = from    {wt} = to
    -->

    <string name="help_predict_keypad">"* Keypad prediction helps app start smoother. (If it doesn't work properly, please turn off this option)"</string>
    <!--
    * Keypad prediction helps app start smoother.
    * It may not work properly under certain circumstances.
    -->

</resources>
