<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:textColor="@android:color/black"
            android:text="@string/timezone"/>

        <Spinner
            android:id="@+id/setting_timezone_spinner"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/setting_timezone_reset"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:text="@string/reset"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:textColor="@android:color/black"
            android:text="@string/saving_time_setting"/>

        <Spinner
            android:id="@+id/setting_saving_time_spinner"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/setting_button_date_format_change"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/date_format_change"/>

    <Button
        android:id="@+id/setting_button_shortcut_setting"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/shortcut_setting"/>

    <CheckBox
        android:id="@+id/setting_edit_time"
        android:layout_width="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:text="@string/edit_time" />

    <CheckBox
        android:id="@+id/setting_secure"
        android:layout_width="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:text="@string/setting_secure" />

</LinearLayout>
