<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingRight="10dp"
        android:paddingEnd="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@android:color/black"
        android:text="@string/label_separator"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:textColor="@android:color/black"
            android:text="@string/left"/>

        <EditText
            tools:ignore="autoFill"
            android:id="@+id/setting_label_separator_left"
            android:inputType="textNoSuggestions|textMultiLine"
            android:hint="@null"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:textColor="@android:color/black"
            android:text="@string/right"/>

        <EditText
            android:id="@+id/setting_label_separator_right"
            android:inputType="textNoSuggestions|textMultiLine"
            android:hint="@null"
            tools:ignore="autoFill"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>