<?xml version="1.0" encoding="utf-8"?>
<park.haneol.project.logger.view.RootLayout
    android:id="@+id/root_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".component.MainActivity">


    <!--android:scrollbars="vertical"-->
    <park.haneol.project.logger.recyclerview.RecView
        android:id="@+id/rec_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fadeScrollbars="true"
        android:isScrollContainer="true"

        app:layout_constraintBottom_toTopOf="@id/edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:fastScrollEnabled="true"
        app:fastScrollHorizontalThumbDrawable="@drawable/thumb_drawable"
        app:fastScrollHorizontalTrackDrawable="@drawable/line_drawable"
        app:fastScrollVerticalThumbDrawable="@drawable/thumb_drawable"
        app:fastScrollVerticalTrackDrawable="@drawable/line_drawable"
        tools:listitem="@layout/item_view" />

    <park.haneol.project.logger.view.InputText
        tools:ignore="autoFill"
        android:id="@+id/edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@null"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textMultiLine|textNoSuggestions"
        android:maxLines="4"
        android:textSize="20dp"
        android:textColorHint="@color/colorHidden"
        android:nextFocusForward="@id/edit_text"
        android:nextFocusDown="@id/edit_text"
        android:nextFocusLeft="@id/edit_text"
        android:nextFocusRight="@id/edit_text"
        android:nextFocusUp="@id/edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/save_button"
        app:layout_constraintStart_toStartOf="parent">
        <requestFocus />
    </park.haneol.project.logger.view.InputText>

    <park.haneol.project.logger.view.SaveButton
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/save"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:scaleType="center"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/menu"
        android:src="@drawable/ic_format_list_bullet_white_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/theme_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:scaleType="center"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/theme"
        android:src="@drawable/ic_invert_colors_white_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu_button" />

    <ImageButton
        android:id="@+id/undo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:scaleType="center"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/undo"
        android:src="@drawable/ic_replay_white_24dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/theme_button" />

</park.haneol.project.logger.view.RootLayout>
